secure-gate-compat/tests/compile-fail/fixed_alias_zero_size.rs
use secure_gate::fixed_alias;

fixed_alias!(ZeroKey, 0);

fn main() {}
